# hastodo

./: .gitignore  ReadMe.md  docker-compose.yaml  hastodo.cabal  package-lock.json
app/: Main.hs
client/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  service-worker.js
client/public/: manifest.json
client/src/: App.jsx  index.css  main.jsx  networking.jsx  service-worker.js
client/src/components/TodoApp/: TodoApp.jsx
client/src/components/TodoApp/Components/: Form.jsx  PwaController.jsx  Todo.jsx
client/src/sections/TodoApp/: TodoApp.jsx
client/src/sections/TodoApp/Components/: ConnectionStatus.jsx  Form.jsx  Todo.jsx  index.jsx
client/src/services/: compositions.js  databasing.js  db-service.js  db_for_service-worker.js  multi-service.js  networking.js
server/: CHANGELOG.md  Dockerfile  hastodo.cabal
server/app/: Main.hs
server/src/: Api.hs  ApiSandbox.hs  MetaApi.hs  Models.hs  Plumbing.hs  Server.hs
server/test/: E2E.hs  Main.hs  TestAPIs.hs
src/: Api.hs
