cabal-version:      3.4
name:               hastodo
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       server/LICENSE
author:             Jens
maintainer:         you@example.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    server/CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Api, 
                      Models, 
                      Plumbing
    -- other-modules:    
    default-extensions: 
                  NoFieldSelectors
                , DuplicateRecordFields
                , OverloadedRecordDot
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0 && <5
                    , time
                    , text
                    , containers
                    , bytestring
                    , directory
                    , servant
                    , servant-server
                    , warp
                    , http-media
                    , wai
                    , wai-cors
                    , aeson
                    , monad-logger
                    , transformers
                    , mtl
                    , stm
                    , string-conversions
    hs-source-dirs:   server/src
    default-language: Haskell2010

executable hastodo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0 && <5,
        hastodo

    hs-source-dirs:   server/app
    default-language: Haskell2010

test-suite hastodo-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    E2E
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   server/test
    main-is:          Main.hs
    build-depends:
          base ^>=4.20.0.0 && <5
        , hastodo
        , text
        , containers
        , aeson
        , http-client
        , servant
        , servant-server
        , servant-client
        , warp
        , wai
        , wai-cors
        , monad-logger
        , hspec
