cabal-version:      3.4
name:               hastodo
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Jens
maintainer:         you@example.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Server, 
                      MetaApi
    other-modules:    Models
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0 && <5
                    , time
                    , text
                    , bytestring
                    , directory
                    , blaze
                    , blaze-html
                    , blaze-markup
                    , attoparsec
                    , servant
                    , servant-server
                    , warp
                    , http-media
                    , wai
                    , wai-cors
                    , aeson
                    , monad-logger
                    , mtl
                    , lucid
                    , string-conversions
    hs-source-dirs:   src
    default-language: Haskell2010

executable hastodo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.1.0 && <5,
        hastodo

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hastodo-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    E2E
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base ^>=4.19.1.0 && <5
        , hastodo
        , text
        , aeson
        , http-client
        , servant
        , servant-server
        , servant-client
        , warp
        , wai
        , wai-cors
        , monad-logger
        , hspec
